address some alignmetn issue

--- a/testimonials-grid-section/scss/_mobile-screen.scss
+++ b/testimonials-grid-section/scss/_mobile-screen.scss
@@ -7,6 +7,7 @@
 }
 @media only screen and (max-width:850px){
     .grid-container{
+        margin-top: 80px;
         grid-template-areas: "daniel daniel jonathan jonathan"
         "jeanette jeanette patrick patrick"
         ". kira kira .";
@@ -21,6 +22,7 @@
     .grid-container{
         display: flex;
         flex-direction: column;
+        
         .daniel{
             @include animation();
             h3{
