--- a/testimonials-grid-section/scss/grid.scss
+++ b/testimonials-grid-section/scss/grid.scss
@@ -41,10 +41,10 @@ body{
 .grid-container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(10,1fr);
+    grid-template-rows: repeat(3,1fr);
     gap: 25px;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 155px;
     margin-left:auto ;
     margin-right: auto;
     align-content: center;
